Updated Open API docs, implemented sports-server and sports-web-api.
